--- a/myClipboard/css/style.css
+++ b/myClipboard/css/style.css
@@ -473,20 +473,9 @@ h3{
   --tw-backdrop-sepia:  ;
 }
 
-.relative {
-  position: relative;
-}
-
-.top-0 {
-  top: 0px;
-}
-
-.right-\[50\] {
-  right: 50;
-}
-
-.right-\[50\%\] {
-  right: 50%;
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .mt-20 {
@@ -517,12 +506,24 @@ h3{
   margin-top: 2.5rem;
 }
 
-.flex {
-  display: flex;
+.mt-80 {
+  margin-top: 20rem;
 }
 
-.h-screen {
-  height: 100vh;
+.mt-32 {
+  margin-top: 8rem;
+}
+
+.mt-2 {
+  margin-top: 0.5rem;
+}
+
+.mt-24 {
+  margin-top: 6rem;
+}
+
+.flex {
+  display: flex;
 }
 
 .h-full {
@@ -543,6 +544,10 @@ h3{
 
 .max-w-3xl {
   max-width: 48rem;
+}
+
+.flex-row {
+  flex-direction: row;
 }
 
 .flex-col {
@@ -676,28 +681,16 @@ body{
 }
 
 @media (min-width: 768px) {
-  .md\:absolute {
-    position: absolute;
+  .md\:flex-row {
+    flex-direction: row;
   }
 
-  .md\:top-0 {
-    top: 0px;
-  }
-
-  .md\:right-\[50\%\] {
-    right: 50%;
-  }
-
-  .md\:-right-\[50\%\] {
-    right: -50%;
+  .md\:flex-col {
+    flex-direction: column;
   }
 }
 
 @media (min-width: 976px) {
-  .lg\:right-\[50\%\] {
-    right: 50%;
-  }
-
   .lg\:mt-20 {
     margin-top: 5rem;
   }
